# advent-of-code

./: .gitignore  README.md
2015/: 01.py  01_1.c  01_1.py  01_2.c  01_2.py  03_1.c  03_2.c  04.c  05_1.c  06_1.c  06_2.c  07_1.py
2015/01/: elevator_2.c
2015/02/: present.c  present_2.c
2015/03/: houses  houses_2
2015/05/: nice_string2  nice_string2.c
2015/07/: gates  gates.c
2015/day_1/: elevator.c
2016/: 01.hs  01.scm  01_plot.py  02.hs  03.hs  04.hs  04.scm  05.hs  06.hs  07.hs  09.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day09.hs  aoc2016.cabal
2017/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day05.py  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs
2018/src/main/scala/: Day01.scala  Day02.scala  Day03.scala  Day04.scala  Day05.scala  Day08.scala  Day09.scala  Utils.scala
2021/: 01.scm  02.scm  03.scm  04.scm
2022/: day01.rkt  day02.rkt  day03.rkt  day04.rkt  day05.rkt  utils.rkt
2023/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Grid.hs  Utils.hs  Zipper.hs  aoc2023.cabal  cabal.project
2024/: build.sbt
2024/src/main/scala/: Day01.worksheet.sc  Day02.worksheet.sc  Day03.worksheet.sc  Day04.worksheet.sc  Day05.worksheet.sc  Day06.worksheet.sc  Day07.worksheet.sc  Day09.worksheet.sc  Day10.worksheet.sc  Day11.scala  Day11.worksheet.sc  Day13.worksheet.sc  Day17.worksheet.sc  Utils.scala
2025/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day10.sc  aoc2025.cabal
