cabal-version:   3.0
name:            aoc2016
version:         0.1.0.0
build-type:      Simple

library solutions
    exposed-modules:
      , Day09
      , Day07
      , Day06
      , Day05
      , Day04
      , Day03
      , Day02
      , Day01
    build-depends:   
        base
      , my-tools
      , parsec
      , containers
      , crypton
      , bytestring
      , split
      , comonad
      , mtl
      , containers
      , monad-loops
      , criterion
      , vector
      , array
    hs-source-dirs:   .
    default-extensions:
      DeriveFunctor
      ConstraintKinds
      DeriveAnyClass
      DeriveGeneric
      FlexibleContexts
      GeneralizedNewtypeDeriving
      LambdaCase
      OverloadedRecordDot
    default-language: Haskell2010
