cabal-version:   3.0
name:            aoc2023
version:         0.1.0.0
build-type:      Simple

library
    exposed-modules:
      , Day01
      , Day02
      , Day03
      , Day04
      , Day05
      , Day06
      , Day07
      , Day08
      , Day09
      , Day10
    other-modules:
        Utils
      , Zipper
      , Grid
    build-depends:   
        base ^>=4.19.2.0
      , parsec
      , containers
      , split
      , comonad
    hs-source-dirs:   .
    default-extensions: DeriveFunctor
    default-language: Haskell2010
