cabal-version:   3.0
name:            aoc2023
version:         0.1.0.0
build-type:      Simple

library solutions
    exposed-modules:
        Utils
      , Zipper
      , Grid
      , Day01
      , Day02
      , Day03
      , Day04
      , Day05
      , Day06
      , Day07
      , Day08
      , Day09
      , Day10
      , Day11
    build-depends:   
        base ^>=4.19.2.0
      , parsec
      , containers
      , split
      , comonad
      , mtl
      , monad-loops
    hs-source-dirs:   .
    default-extensions: DeriveFunctor
    default-language: Haskell2010
