cabal-version:   3.0
name:            aoc2023
version:         0.1.0.0
build-type:      Simple

library solutions
    exposed-modules:
        Day14
      , Day13
      , Day12
      , Day11
      , Day10
      , Day09
      , Day08
      , Day07
      , Day06
      , Day05
      , Day04
      , Day03
      , Day02
      , Day01
    build-depends:   
        base
      , my-tools
      , parsec
      , containers
      , split
      , comonad
      , mtl
      , monad-loops
      , criterion
      , vector
      , array
    hs-source-dirs:   .
    default-extensions: DeriveFunctor
    default-language: Haskell2010
