cabal-version:   3.0
name:            aoc2025
version:         0.1.0.0
build-type:      Simple

library solutions
    exposed-modules:
        Day06
      , Day05
      , Day04
      , Day03
      , Day02
      , Day01
    build-depends:   
        base
      , my-tools
      , parsec
      , containers
      , split
      , comonad
      , mtl
      , monad-loops
      , criterion
      , vector
      , array
    hs-source-dirs:   .
    default-extensions:
      DeriveFunctor
      ConstraintKinds
      DeriveAnyClass
      DeriveGeneric
      FlexibleContexts
      GeneralizedNewtypeDeriving
      LambdaCase
      OverloadedRecordDot
    default-language: Haskell2010
